--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,34 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.atager.thirteen_stones.activities.MainActivity">
+<menu
+  xmlns:android = "http://schemas.android.com/apk/res/android"
+  xmlns:app = "http://schemas.android.com/apk/res-auto"
+  xmlns:tools = "http://schemas.android.com/tools"
+  tools:context = "com.atager.thirteen_stones.activities.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+      android:id = "@+id/action_new_game"
+      android:icon = "@android:drawable/ic_media_play"
+      android:title = "@string/new_game"
+      app:showAsAction = "ifRoom"/>
+
+    <item
+      android:id="@+id/action_view_stats"
+      android:icon="@drawable/ic_outline_view_list_24"
+      android:title="@string/view_statistics"
+      app:showAsAction="ifRoom"/>
+
+    <item
+      android:id="@+id/action_reset_stats"
+      android:icon="@drawable/ic_outline_cancel_24"
+      android:title="@string/reset_statistics"
+      app:showAsAction="ifRoom"/>
+
+    <item
+      android:id = "@+id/action_settings"
+      android:title = "@string/action_settings"
+      app:showAsAction = "never"/>
+
+    <item
+      android:id="@+id/action_about"
+      android:title="@string/about"
+      app:showAsAction="never"/>
 </menu>
